# riset

./: .gitignore  AGENTS.md  NOTEBOOK_PLAYBOOK_RINGKAS.md  README.md  RUN_STAGE2.md  download_caers_dataset.py  file.md  main_notebook.ipynb  pyproject.toml  qwen_zero_shot_preview.ipynb  real_dataset_pipeline.ipynb  requirements.txt  risetv1.ipynb  risetv1_bedah code.ipynb
.ipynb_checkpoints/: download_caers_dataset-checkpoint.py  pyproject-checkpoint.toml  requirements-checkpoint.txt
configs/: bold_multimodal.json  caers_single_label.json  emotic_multimodal.json  sota_baselines.example.json
notebook_outputs/caer_s_local_qformer/: ablation_summary.json  best_local.pt  history.json  results.json
notebook_outputs/research_runs/: real_dataset_switch_report.md  research_report.txt  research_summary.json
notebook_outputs/risetv1_qwen/: stage1_pseudo_labels_qwen.jsonl  stage1_pseudo_labels_qwen.shard0.jsonl
scripts/: evaluate.py  generate_pseudo_labels.py  generate_pseudo_labels_qwen_dual_gpu.py  generate_pseudo_labels_qwen_single_gpu.py  qwen_zero_shot.py  run_ablation.py  run_stage2_full.sh  run_stage2_prepare_only.sh  run_stage2_train_eval.sh  train.py  train_stage2_from_pseudo_labels.py  visualize_attention.py
scripts/__pycache__/: evaluate.cpython-313.pyc.2425910290320  generate_pseudo_labels.cpython-313.pyc.2425909998992  run_ablation.cpython-313.pyc.2425910290320  train.cpython-313.pyc.2425910290320  visualize_attention.cpython-313.pyc.2425910290320
src/emotion_reasoning/: __init__.py  config.py  (+1 more)
tests/: conftest.py  test_metrics.py  test_qformer.py
(+64 files in other folders)
